fixed the comment text box not showing up error

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,15 +76,15 @@ body {
 
 
 
-  input[type=text],
+  /* input[type=text],
   input[type=password],
   textarea {
       border: 1px solid #EB796F;
       border-radius: 5px;
       padding: 10px;
       width: 90%;
-  }
-  
+  } */
+/*   
   label {
       padding-top: 10px;
       display: block;
@@ -100,7 +100,7 @@ body {
       cursor: pointer;
       text-decoration: none;
       margin-top: 10px;
-  }
+  } */
 
 
 /* gallery background image and text */
